[package]
authors = ["Odroe, Inc. <hello@odroe.com>", "Leonardo Razovic <leorazzo@gmail.com>", "Seven Du <shiweidu@outlook.com>"]
categories = ["cryptography"]
description = "OOTP (Open One-time Password) is a supports multiple programming languages. The generated one-time passwords are fully compliant with HOTP (HMAC-based One-time Password) and TOTP (Time-based One-time Password). 🚀It's easy to use!"
documentation = "https://docs.rs/ootp"
edition = "2018"
homepage = "https://github.com/odroe/ootp"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["ootp", "totp", "hotp", "rust", "rfc6238"]
license = "MIT"
name = "ootp"
readme = "README.md"
repository = "https://github.com/odroe/ootp"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha = "0.5.0"

[dev-dependencies]
base32 = "0.4.0"
criterion = "0.4.0"
hex = "0.4.3"

[[bench]]
harness = false
name = "hotp_bench"
path = "benches/hotp_bench.rs"

[[bench]]
harness = false
name = "totp_bench"
path = "benches/totp_bench.rs"
